@@ -2,6 +2,7 @@
 - Added self-enrollment option to groups (Enterprise version)
 - Fixed setting file encodings to UTF-IMAP even when UTF-8 is selected
 - Added sorting terms in each tab in glossary page
+- Fixed issue about inserting & in question feedback
 
 === Version 3.6.9 build 11018 ===
 - Added course lessons schedule display in course info page
